--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "balm-ui": "^10.8.1",
     "pinia": "^2.0.14",
+    "sortablejs": "^1.15.0",
     "uid": "^2.0.0",
     "vue": "^3.2.36",
     "vuedraggable": "^4.1.0"
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.36",
+    "@types/sortablejs": "^1.13.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-typescript": "^10.0.0",
